[package]
name = "tauri-mini"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["android"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "2.0.0-rc"

[lib]
name = "tauri_mini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
