[package]
name = "tauri-mini"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_mini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "2.0.0"

[profile.release]
opt-level = "z"      # Optimasi ukuran paling agresif
lto = true           # Link Time Optimization penuh
codegen-units = 1    # Minimalisir paralelisme demi ukuran
panic = "abort"      # Hapus mekanisme unwinding
strip = true         # Hapus semua simbol debug
